# plotter

./: .gitignore  datamediator.py  main.py  mainwindow.py  pyproject.toml  socketclient.py  sources.toml  toolbar.py
notebooks/pandas/: histogram.ipynb  lineplot.ipynb  minmax.ipynb  timeofdaypolar.ipynb
notebooks/polars/: histogram.ipynb  lineplot.ipynb  minmax.ipynb  timeofdaypolar.ipynb
raspberry_listener/: datamediator.py  datathread.py  datatypes.py  drawwidget.py  graphupdater.py  histogramwidget.py  lineplotwidget.py  main.py  mainwindow.py  plotmanager.py  plottabwidget.py  qtplotwidget.py  remotereader.py  socketclient.py  timeofdayhistogramwidget.py  toolbar.py
raspberry_listener/controller/: __init__.py  controller.py
raspberry_listener/controller/raspberrysensorcontroller/: __init__.py  controller.py  raspberrysensorcontroller.py
raspberry_listener/controller/yrcontroller/: __init__.py  yrcontroller.py
raspberry_listener/datamodels/: __init__.py  basemodels.py  datatypes.py  humidity.py  temperature.py
raspberry_listener/datamodels/sources/: __init__.py  framehandler.py
raspberry_listener/plotstrategies/: __init__.py  bar_histogram.py  line.py  plotstrategy.py  timeofday.py
raspberry_listener/plotstrategies/axes/: __init__.py  axes.py
raspberry_listener/plotstrategies/color/: __init__.py  color.py
raspberry_listener/plotstrategies/legend/: __init__.py  legend.py
raspberry_listener/plotstrategies/plotcontainer/: __init__.py  plotcontainer.py
raspberry_listener/sources/: __init__.py  dataloader.py  framehandler.py  settings.py
raspberry_listener/tests/: test_apiclient.py
raspberry_listener/ui/: __init__.py  dataplotterwindow.py
(+36 files in other folders)
