[tool.poetry]
name = "raspberry-listener"
version = "0.1.0"
description = "Listens to Raspberry Pi over socket and gathers CPU temperature data. Plots data."
authors = ["Magne Strømsnes <alaka@Alaka-PC.>"]
readme = "README.md"
packages = [{include = "raspberry_listener"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
matplotlib = "^3.6.3"
PySide6 = "^6.4.2"
numpy = "^1.24.2"
fabric = "^3.0.0"
pandas = "^1.5.3"
fastparquet = "^2023.2.0"
decorator = "^5.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
