[tool.poetry]
name = "raspberry-listener"
version = "0.1.0"
description = "Listens to Raspberry Pi over socket and gathers CPU temperature data. Plots data."
authors = ["Magne Strømsnes <alaka@Alaka-PC.>"]
readme = "README.md"
packages = [{include = "raspberry_listener"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0 || >3.11.0,<3.12"
matplotlib = "^3.6.3"
PySide6 = "^6.4.2"
numpy = "^1.24.2"
fabric = "^3.0.0"
pandas = {version = ">=2.0.0", extras = ["performance"]}
fastparquet = "^2023.2.0"
decorator = "^5.1.1"
snakeviz = "^2.2.0"
requests = "^2.30.0"
pydantic = "^1.10.7"
pandera = {extras = ["strategies"], version = "^0.14.5"}
fastapi = "^0.95.1"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
ipykernel = "^6.23.0"
types-requests = "^2.30.0.0"
snakeviz = "^2.2.0"
scalene = "^1.5.21.2"
polars = "^0.17.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
